deploy: a1cbecd4f007901b783c51fbed5ac35bea99f61d

--- a/03-deep_learning_in_rust.html
+++ b/03-deep_learning_in_rust.html
@@ -153,7 +153,7 @@
 <ul>
 <li>Rust can support GPU.</li>
 <li>Rust can provide superior performance than Python and by how much.</li>
-<li>Rust good and bad use case for Deep Learning.</li>
+<li>Good and bad use case for Deep Learning in Rust.</li>
 </ul>
 <h2 id="state-of-the-art-of-deep-learning-in-rust"><a class="header" href="#state-of-the-art-of-deep-learning-in-rust">State of the art of Deep Learning in Rust</a></h2>
 <p>Deep Learning in the Rust ecosystem is spread between native libraries like <a href="https://github.com/rust-ml/linfa">linfa</a> and C++ binding of common libraries like <a href="https://github.com/tensorflow/rust">Tensorflow</a>, <a href="https://github.com/LaurentMazare/tch-rs">Pytorch</a> and <a href="https://github.com/nbigaouette/onnxruntime-rs">Onnxruntime</a>.</p>
