--- a/deep-learning/bert-server.html
+++ b/deep-learning/bert-server.html
@@ -145,7 +145,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2 id="onnx-server-serving-bert-as-an-api"><a class="header" href="#onnx-server-serving-bert-as-an-api">ONNX Server: Serving BERT as an API</a></h2>
-<p>Let say you want to serve a BERT-like model through a server API endpoint.</p>
+<p>Another work exemple is serving a BERT-like model through a server API endpoint.</p>
 <p>On my setup, I got those metrics:</p>
 <table><thead><tr><th></th><th>Python FastAPI</th><th>Rust Actix Web</th><th>Speedup</th></tr></thead><tbody>
 <tr><td>Encoding time</td><td>400μs</td><td>100μs</td><td></td></tr>
