--- a/deep-learning/preprocessing.html
+++ b/deep-learning/preprocessing.html
@@ -259,7 +259,7 @@ fn main() -&gt; std::result::Result&lt;(), OrtError&gt; {
 <tr><td><strong>Rust <a href="https://docs.rs/tokenizers/0.10.1/tokenizers/">Tokenizer</a></strong></td><td><strong>50-150μs</strong></td><td><strong>x4</strong> 🔥</td></tr>
 </tbody></table>
 <p>You can tokenize 4 times faster in Rust than Python, with the same Hugging Face Tokenizer library.</p>
-<p>➡️ Preprocessing can be very performant in Rust, making a case that Rust can outperform Python for Deep Learning.</p>
+<p>Preprocessing can be very performant in Rust, making a case that Rust can outperform Python for Deep Learning.</p>
 
                     </main>
 
