--- a/pandas-polars/020-reading.html
+++ b/pandas-polars/020-reading.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Pandas vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html" class="active"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Rust vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html" class="active"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -146,11 +146,8 @@
                     <main>
                         <h2 id="reading"><a class="header" href="#reading">Reading</a></h2>
 <h3 id="reading-in-polars"><a class="header" href="#reading-in-polars">Reading in Polars</a></h3>
-<p>Reading is pretty straightforward with many configurations possible.</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>use polars::prelude::*;
+<p>Reading in Polars is pretty straightforward:</p>
+<pre><code class="language-rust noplaypen">use polars::prelude::*;
 
 //...
 
@@ -159,14 +156,10 @@
         .with_encoding(CsvEncoding::LossyUtf8)
         .has_header(true)
         .finish()?;
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <h3 id="reading-in-native-rust"><a class="header" href="#reading-in-native-rust">Reading in Native Rust</a></h3>
-<p>Reading in Rust using csv and serde requires that you already have a <code>struct</code> , in my case my struct is <code>utils::NativeDataFrame</code></p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>    let file = File::open(path)?;
+<p>Reading in Rust using <code>csv</code> and <code>serde</code> requires that you already have a <code>struct</code>, in my case my struct is <code>utils::NativeDataFrame</code></p>
+<pre><code class="language-rust noplaypen">    let file = File::open(path)?;
 
     let mut rdr = csv::ReaderBuilder::new().delimiter(b',').from_reader(file);
     let mut records: Vec&lt;utils::NativeDataFrame&gt; = rdr
@@ -177,17 +170,15 @@
             Err(e) =&gt; None,
         })
         .collect();
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <h3 id="performance"><a class="header" href="#performance">Performance</a></h3>
 <table><thead><tr><th></th><th>Time(s)</th><th>Speedup Pandas</th></tr></thead><tbody>
-<tr><td><strong>Native Rust (Single thread)</strong></td><td><strong>12 s</strong></td><td><strong>2.4x</strong></td></tr>
+<tr><td>Native Rust (Single thread)</td><td>12 s</td><td>2.4x</td></tr>
 <tr><td>Polars(Single thread)</td><td>19 s</td><td>1.5x</td></tr>
-<tr><td>Polars(Multithread)</td><td>22 s</td><td>1.3x</td></tr>
+<tr><td><strong>Polars(Multithread)</strong></td><td><strong>6.6 s</strong></td><td><strong>4.5x</strong></td></tr>
 <tr><td>Pandas</td><td>29.6 s</td><td></td></tr>
 </tbody></table>
-<p>For reading, <strong>Polars</strong> has a nice happy and I bet it’s also doing some indexing which explains the difference in timing between the native implementation. There seems to be a bug for multithreaded Polars that makes it slower than single-threaded. <em>(Probably a good first issue…</em> 🤪 <em>)</em></p>
-<p>Note that reading is bound by the reading speed of my SSD around ~300Mb/s.</p>
+<p>For reading, <strong>Polars</strong> is faster than Pandas and Native Rust, being able to do it in multithreading.</p>
 
                     </main>
 
