--- a/pandas-rust/010-reading.html
+++ b/pandas-rust/010-reading.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Pandas vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html" class="active"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Rust vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html" class="active"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -155,18 +155,11 @@ df = pd.read_csv(path)
 <h3 id="rust-reading-csv"><a class="header" href="#rust-reading-csv">Rust Reading CSV</a></h3>
 <p>For Rust, Managing bad quality data is very very tedious. In this dataset, some fields are empty, some lines are badly formatted, and some are not UTF-8 encoded.</p>
 <p>To open the CSV, I used the <code>csv</code> crate but it does not solve all the issues listed above. With well-formatted data, reading can be done like so:</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>let path = &quot;/home/peter/Documents/TEST/RUST/terrorism/src/foo.csv&quot;;
+<pre><code class="language-rust noplaypen">let path = &quot;/home/peter/Documents/TEST/RUST/terrorism/src/foo.csv&quot;;
 let mut rdr = csv::Reader::from_path(path).unwrap();
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p>But with bad quality formatting, mine looked like this:</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>use std::fs::File;    
+<pre><code class="language-rust noplaypen">use std::fs::File;    
 use encoding_rs::WINDOWS_1252;
 use encoding_rs_io::DecodeReaderBytesBuilder;
 
@@ -179,18 +172,14 @@ use encoding_rs_io::DecodeReaderBytesBuilder;
     let mut rdr = csv::ReaderBuilder::new()
         .delimiter(b',')
         .from_reader(transcoded); 
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p><em>ref:</em> <a href="https://stackoverflow.com/questions/53826986/how-to-read-a-non-utf8-encoded-csv-file"><em>https://stackoverflow.com/questions/53826986/how-to-read-a-non-utf8-encoded-csv-file</em></a></p>
 <h3 id="rust-instantiating-the-data"><a class="header" href="#rust-instantiating-the-data">Rust Instantiating the data</a></h3>
 <p>To instantiate the data, I used Serde <a href="https://serde.rs/">https://serde.rs/</a> for serializing and deserializing my data.</p>
 <p>To use Serde, I needed to make a struct of my data. But, having a struct of my data is great has it makes my code follow a model-based coding paradigm with a well-defined type for each field. It also enables me to implement traits and methods on top of them.</p>
 <p>However, the data I wanted to use has 130 columns… And, It seemed that there is no way to generate the definition of the struct automatically.</p>
 <p>To avoid doing the definition manually, I had to build my own struct generator:</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>fn inspect(path: &amp;str) {
+<pre><code class="language-rust noplaypen">fn inspect(path: &amp;str) {
     let mut record: Record = HashMap::new();
 
     let mut rdr = csv::Reader::from_path(path).unwrap();
@@ -229,13 +218,9 @@ use encoding_rs_io::DecodeReaderBytesBuilder;
     }
     println!(&quot;}}&quot;);
 }
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p>This generated the struct as follows:</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>use serde::{Deserialize, Serialize};
+<pre><code class="language-rust noplaypen">use serde::{Deserialize, Serialize};
 use serde_with::skip_serializing_none;
 
 #[skip_serializing_none]
@@ -256,8 +241,7 @@ struct DataFrame {
     #[serialize_always]
 
     // ...
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p><em>skip_serializing_none: Avoid having error on empty fields in the CSV.</em></p>
 <p><em>serialize_always: Makes the number of field when writing csv fixed.</em></p>
 <p>Now, that I had my struct, I used serde serialization to populate a vector of struct:</p>
