deploy: 5d03d7d2110a46305a22024a3f73cb835b85cf85

--- a/00-scraping.html
+++ b/00-scraping.html
@@ -157,6 +157,8 @@
 </tbody></table>
 <p>‌
 Performances are pretty similar for such low level of requests. Time is consumed downloading. Maybe with significantly more requests, bigger difference would be seen.</p>
+<br/>
+<p><em>This blog was originally published on: <a href="https://able.bio/haixuanTao/web-scraper-python-vs-rust--d6176429">https://able.bio/haixuanTao/web-scraper-python-vs-rust--d6176429</a></em></p>
 
                     </main>
 
