--- a/01-pandas-vs-rust.html
+++ b/01-pandas-vs-rust.html
@@ -155,6 +155,8 @@
 <h3 id="data"><a class="header" href="#data">Data</a></h3>
 <p>Performance benchmarks are done on this very random dataset: <a href="https://www.kaggle.com/START-UMD/gtd">https://www.kaggle.com/START-UMD/gtd</a> that offers around 160,000 lines / 130 columns for a total size of 150Mb. The size of this dataset corresponds to the type of dataset I regularly encounter, that’s why I chose this one. It isn’t the biggest dataset in the world, and, more studies should probably be done on a larger dataset.</p>
 <p>The merge will be done with another random dataset: <a href="https://datacatalog.worldbank.org/dataset/world-development-indicators">https://datacatalog.worldbank.org/dataset/world-development-indicators</a>, the <code>WDICountry.csv</code></p>
+<br/>
+<p><em>This blog was originally published on <a href="https://able.bio/haixuanTao/data-manipulation-pandas-vs-rust--1d70e7fc">https://able.bio/haixuanTao/data-manipulation-pandas-vs-rust--1d70e7fc</a></em></p>
 
                     </main>
 
