--- a/02-polars-vs-rust.html
+++ b/02-polars-vs-rust.html
@@ -152,6 +152,8 @@
 <p>Now, when it comes to production, Pandas is slightly trickier. Pandas does not scale very well… there is no multithreading… It’s not thread-safe… It’s not memory efficient.</p>
 <p>But all those problems are the raison d’être of Rust.</p>
 <p><strong>What if, there was a DataFrame API written in Rust that solves all those issues and at the same time keeps a nice API?</strong></p>
+<br/>
+<p><em>This blog was originally published here: <a href="https://able.bio/haixuanTao/data-manipulation-polars-vs-rust--3def44c8">https://able.bio/haixuanTao/data-manipulation-polars-vs-rust--3def44c8</a></em></p>
 
                     </main>
 
