--- a/03-deep_learning_in_rust.html
+++ b/03-deep_learning_in_rust.html
@@ -164,6 +164,8 @@
 <li>a small bundle size ~30Mb compared to <a href="https://github.com/pytorch/pytorch/issues/34058">tch-rs</a> 1.2 Gb bundle. </li>
 </ul>
 <p>➡️ this post is therefore going to be based on onnxruntime-rs.</p>
+<br/>
+<p><em>This blog was originally published here: <a href="https://able.bio/haixuanTao/deep-learning-in-rust-with-gpu--26c53a7f">https://able.bio/haixuanTao/deep-learning-in-rust-with-gpu--26c53a7f</a></em></p>
 
                     </main>
 
