deploy: bd06e40771a6aefe7a646757659263a307e6bbf6

--- a/print.html
+++ b/print.html
@@ -11,7 +11,7 @@
         
 
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="">
+        <meta name="description" content="Inspired by Rustdoc resume, I wanted to use a Rust tool to build an enhanced resume. Mdbook seemed like a great fit, and what is a resume other than a documentation of self.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
@@ -1354,7 +1354,7 @@ async fn main() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', 'G-F58YNE6LHC', 'auto');
+                ga('create', '284355753', 'auto');
                 ga('send', 'pageview');
             }
         </script>
