--- a/02-polars-vs-rust.html
+++ b/02-polars-vs-rust.html
@@ -10,7 +10,7 @@
         
 
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="">
+        <meta name="description" content="Inspired by Rustdoc resume, I wanted to use a Rust tool to build an enhanced resume. Mdbook seemed like a great fit, and what is a resume other than a documentation of self.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
@@ -197,7 +197,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', 'G-F58YNE6LHC', 'auto');
+                ga('create', '284355753', 'auto');
                 ga('send', 'pageview');
             }
         </script>
