deploy: 78dcb5ccc2832587648514c36e03e9be1ca5ff86

--- a/scraping/asynchronous.html
+++ b/scraping/asynchronous.html
@@ -279,7 +279,7 @@ async fn main() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', '284355753', 'auto');
+                ga('create', 'G-F58YNE6LHC', 'auto');
                 ga('send', 'pageview');
             }
         </script>
