--- a/deep-learning/hardware.html
+++ b/deep-learning/hardware.html
@@ -270,7 +270,7 @@ cuda = []
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', '284355753', 'auto');
+                ga('create', 'G-F58YNE6LHC', 'auto');
                 ga('send', 'pageview');
             }
         </script>
