--- a/00-scraping.html
+++ b/00-scraping.html
@@ -202,7 +202,7 @@ Performances are pretty similar for such low level of requests. Time is consumed
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', 'G-K1KMR3DSH9', 'auto');
+                ga('create', 'UA-134601956-5', 'auto');
                 ga('send', 'pageview');
             }
         </script>
