--- a/print.html
+++ b/print.html
@@ -1354,7 +1354,7 @@ async fn main() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', 'G-K1KMR3DSH9', 'auto');
+                ga('create', 'UA-134601956-5', 'auto');
                 ga('send', 'pageview');
             }
         </script>
