deploy: 7f9d26a42a3f3241a89e41c14f26b19cf339f7ad

--- a/print.html
+++ b/print.html
@@ -1303,7 +1303,9 @@ git clone --recursive https://github.com/sorin-ionescu/prezto.git &quot;${ZDOTDI
 <li>docker completion</li>
 <li>git completion</li>
 </ul>
-<p>More info: https://github.com/sorin-ionescu/prezto</p>
+<blockquote>
+<p>More info: <a href="https://github.com/sorin-ionescu/prezto">https://github.com/sorin-ionescu/prezto</a></p>
+</blockquote>
 <h2 id="fzf"><a class="header" href="#fzf">FZF</a></h2>
 <p><code>fzf</code> main idea is that you should never have to know by heart strings that you can approximate.</p>
 <h3 id="installation-1"><a class="header" href="#installation-1">Installation</a></h3>
@@ -1318,7 +1320,9 @@ git clone --recursive https://github.com/sorin-ionescu/prezto.git &quot;${ZDOTDI
 <li><code>cd **</code></li>
 <li><code>vim **</code></li>
 </ul>
-<p>More info at: https://github.com/junegunn/fzf</p>
+<blockquote>
+<p>More info at: <a href="https://github.com/junegunn/fzf">https://github.com/junegunn/fzf</a></p>
+</blockquote>
 <h2 id="vscode"><a class="header" href="#vscode">VSCode</a></h2>
 <p>VSCode makes it really easy to have flexibility and automation put in place.</p>
 <p>Productivity shortcut I use on daily basis:</p>
